tests/snapshots/examples_fixtures/Modules__MapUtils.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/MapUtils.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.MapUtils` doesn't match file path `examples/Modules/MapUtils.flx`.

  --> examples/Modules/MapUtils.flx:4:1
  |
4 | module Modules.MapUtils {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
